[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/Level/level-jonathan/laser/laser.gd" type="Script" id=1]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.0178271, 0.0171651, 0.515606 )

[sub_resource type="SpatialMaterial" id=2]
flags_transparent = true
albedo_color = Color( 0, 1, 0, 0.654902 )

[sub_resource type="CapsuleMesh" id=3]
material = SubResource( 2 )
radius = 0.1
mid_height = 4.0

[sub_resource type="CylinderShape" id=4]
radius = 1.17972
height = 3.82945

[node name="laser" type="Spatial"]
script = ExtResource( 1 )

[node name="Area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 4, 0, 0, 0 )
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = SubResource( 3 )
material/0 = null

[node name="sound_area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="sound_area"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
shape = SubResource( 4 )
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_entered" from="sound_area" to="." method="_on_sound_area_body_entered"]
[connection signal="body_exited" from="sound_area" to="." method="_on_sound_area_body_exited"]
